--- a/src/main/web/white-elephant.html
+++ b/src/main/web/white-elephant.html
@@ -168,7 +168,8 @@
     A present may have no more than 3 owners. This means that it may be stolen up to twice, but no more.
 </p>
 <p>
-    When all turns have been taken, every present will have an owner. We will then co-ordinate postage somehow...?
+    When all turns have been taken, every present will have an owner.
+    We will then share addresses in a spreadsheet and everyone can post their present to its new owner.
 </p>
 
 <h3>Signup:</h3>
@@ -221,7 +222,7 @@
 
     <div>
         <label>
-            A longer description of your opened present:<span class="note"> (0-1000 characters)</span><br/>
+            A longer description of your opened present (optional):<span class="note"> (0-1000 characters)</span><br/>
             <textarea rows="6"
                       cols="100"
                       maxlength="1000"
